// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input/ino-form-row Mandatory smoke-test 1`] = `
<div id="root-inner">
  <div class>
    <ino-form-row class="customizable-form-row hydrated"
                  label="Label"
                  mandatory="true"
    >
      <div class="ino-form-row__composer">
        <div class="ino-form-row__label">
          Label
          <span>
            *
          </span>
        </div>
        <div class="ino-form-row__element">
          <ino-input class="hydrated"
                     tabindex="-1"
          >
            <label class="ino-input__composer mdc-text-field mdc-text-field--filled mdc-text-field--box mdc-text-field--no-label mdc-ripple-upgraded">
              <ino-label class="hydrated">
                <div class="mdc-line-ripple">
                </div>
              </ino-label>
              <input class="mdc-text-field__input"
                     step="1"
                     type="text"
              >
            </label>
            <div class="mdc-text-field-helper-line">
            </div>
          </ino-input>
        </div>
      </div>
    </ino-form-row>
  </div>
</div>
`;

exports[`Input/ino-form-row Playground smoke-test 1`] = `
<div id="root-inner">
  <div class>
    <ino-form-row class="customizable-form-row hydrated"
                  label="Label"
                  mandatory="false"
    >
      <div class="ino-form-row__composer">
        <div class="ino-form-row__label">
          Label
        </div>
        <div class="ino-form-row__element">
          <ino-input class="hydrated"
                     tabindex="-1"
          >
            <label class="ino-input__composer mdc-text-field mdc-text-field--filled mdc-text-field--box mdc-text-field--no-label mdc-ripple-upgraded">
              <ino-label class="hydrated">
                <div class="mdc-line-ripple">
                </div>
              </ino-label>
              <input class="mdc-text-field__input"
                     step="1"
                     type="text"
              >
            </label>
            <div class="mdc-text-field-helper-line">
            </div>
          </ino-input>
        </div>
      </div>
    </ino-form-row>
  </div>
</div>
`;
